changes to html files

--- a/AWT/exp2/CV.html
+++ b/AWT/exp2/CV.html
@@ -11,5 +11,26 @@
         <p>Email: john.doe@example.com</p>
         <p>Phone: (123) 456-7890</p>
     </header>
+        <h2>Education</h2>
+        <p><strong>University of Example</strong></p>
+        <p>Bachelor of Science in Computer Science, 2020</p>
+        <h2>Experience</h2>
+        <p><strong>Software Developer</strong></p>
+        <p>Example Company, 2020 - Present</p>
+        <ul>
+            <li>Developed and maintained web applications</li>
+            <li>Collaborated with cross-functional teams</li>
+            <li>Implemented new features based on client requirements</li>
+        </ul>
+        <h2>Skills</h2>
+        <ul>
+            <li>Programming Languages: JavaScript, Python, Java</li>
+            <li>Web Technologies: HTML, CSS, React</li>
+            <li>Database Management: MySQL, MongoDB</li>
+        </ul>
+    
+        <h2>Projects</h2>
+        <p><strong>Project Name</strong></p>
+        <p>Description of the project and technologies used.</p>
 </body>
 </html>
